--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'></svg>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>constellarium</title>
+  <title>starbugs</title>
 </head>
 
 <body>
